--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 venv/
+venvpypy/
 build/
 develop-eggs/
 dist/
@@ -57,3 +58,8 @@ target/
 #Local Config
 local_config.yml
 .foundry_ids
+
+
+# Images
+*.jpg
+*.png
